--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -22,6 +22,15 @@ h1, h2, h3, h4, h5, h6 {
   border: 2px solid #007bff;
 }
 
+.link {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.link:hover {
+  text-decoration: none;
+}
+
 .navbar {
   width: 100%;
   height: 60px;
@@ -144,11 +153,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .container-content {
-  padding: 70px 10px 0 260px;
+  padding: 70px 50px 0 300px;
 }
 
 .container-content-expand {
-  padding: 70px 10px 0 10px;
+  padding: 70px 100px 0 100px;
 }
 
 .sidebar-contaianer-close {
@@ -162,6 +171,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media(max-width: 992px) {
+
+  .sidebar-contaianer-close-expand {
+    display: unset;
+  } 
 
   .container-content {
     padding: 70px 10px 0 10px;
@@ -177,10 +190,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media(max-width: 768px) {
-
-  .sidebar-contaianer-close-expand {
-    display: unset;
-  }  
 
   .navbar-logo-container {
     display: none;
